--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -590,4 +590,8 @@ blockquote {
 		margin-top: 30px;
 	}
 
+	.legends div {
+		width: 100% !important;
+	}
+
 }
